syntax = "proto3";
package orgmanagement;

message CreateOrgRequest {
  string display_name = 1;
  string admin_username = 2;
  string admin_email = 3;
  string admin_password = 4;
  bool should_reset_password = 5;
}

message CreateOrgReply {
  string organization_id  =  1; // This SHOULD be a UUID, but we don't know how to handle it, so we're stringing it along for now.
}

service OrganizationManager {
  rpc CreateOrg (CreateOrgRequest) returns (CreateOrgReply);
}

